# agents_for_2048

./: .gitignore  .gitmodules  pyproject.toml
src/: agent.py  environment.py
src/agents/deep_q_learning/: agent.py  deep_q_agent.py
src/rl_training_framework/agents/: agent_base.py
src/rl_training_framework/agents/AgentDeepQLearning/: agent.py  hyperparameters.toml  utils.py
src/rl_training_framework/environments/: environment_base.py
src/rl_training_framework/environments/Env2048/: environment.py  game_config.toml  test_config.toml
src/rl_training_framework/environments/Env2048.bak/: environment.py
src/rl_training_framework/logging/: logging_conf.json
